feat: govern knowledge releases and access